<resources>
    <string name="app_name">P03 Bill Calculator</string>
    <string name="amount"> Amount </string>
    <string name="numPax">Num of Pax</string>
    <string name="svsEnabled"> NO SVS</string>
    <string name="svsDisabled">NO SVS</string>
    <string name="gstEnabled"> GST</string>
    <string name="gstDisabled">GST</string>
    <string name="discountpercent">Discount (%) </string>
    <string name="discount"></string>
    <string name="split">Split </string>
    <string name="reset">Reset</string>
</resources>