<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="34dp">

        <TextView
            android:id="@+id/textAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/editInputAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textNumPax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numPax" />

        <EditText
            android:id="@+id/editInputNumPax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tbSvs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/svsDisabled"
                android:textOn="@string/svsEnabled" />

            <ToggleButton
                android:id="@+id/tbGst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/gstDisabled"
                android:textOn="@string/gstEnabled" />

        </LinearLayout>


        <TextView
            android:id="@+id/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discountpercent" />

        <EditText
            android:id="@+id/editInputDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:inputType="phone"
            android:text="@string/discount" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/btncash"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="Cash" />

            <RadioButton
                android:id="@+id/btnpaynow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="Paynow" />


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/splitbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split"
            app:backgroundTint="#A8A4A4" />

        <Button
            android:id="@+id/resetbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            app:backgroundTint="#A8A4A4" />

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTotalBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textEachPays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>